--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
+  },
   "dependencies": {
-    "babel-preset-env": "^1.6.1",
     "bluebird": "^3.5.1",
     "getusermedia": "^2.0.1",
     "jquery": "^3.3.1",
-    "node-sass": "^4.7.2",
     "raf-polyfill": "^1.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0"
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "babel-preset-env": "^1.7.0",
+    "parcel-bundler": "^1.12.3",
+    "sass": "^1.17.3"
   }
 }
